Field Hunt/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed last year.</inlineHelpText>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed this year.</inlineHelpText>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The smallest amount of a won Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Last_Year__c</fullName>
        <inlineHelpText>The sum of soft credit Opportunity amounts last year determined by Opportunity Contact Role and filtered by Roles in Household Settings.</inlineHelpText>
        <label>Soft Credit Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_This_Year__c</fullName>
        <inlineHelpText>Total soft credit amount this year</inlineHelpText>
        <label>Soft Credit This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Total__c</fullName>
        <inlineHelpText>Total amount in soft credits for this Contact&apos;s lifetime. Defined in the Household Settings tab.</inlineHelpText>
        <label>Soft Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Two_Years_Ago__c</fullName>
        <inlineHelpText>The sum of soft credit Opportunity amounts two years ago determined by Opportunity Contact Role and filtered by Roles in Household Settings.</inlineHelpText>
        <label>Soft Credit Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account.  Deprecated; replaced by HouseholdsSettings npo02__Household_Rules__c</description>
        <inlineHelpText>Indicates if Household should be created and updated for this Contact (all Contacts or just Individual Account Contacts)</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR-DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Individual Contacts</fullName>
                </value>
                <value>
                    <fullName>All New or Edited Contacts</fullName>
                </value>
                <value>
                    <fullName>No Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Membership Opportunities (Record Type) related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The sum of won Opportunity Amounts related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Total_Household_Gifts__c</fullName>
        <description>Formula:  Total Gifts on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__TotalOppAmount__c,
npo02__Household__r.npo02__TotalOppAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:  Total Gifts on related Household.</inlineHelpText>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Address_Verification_Status__c</fullName>
        <description>Verification status of the current address.</description>
        <formula>npsp__Current_Address__r.npsp__Verification_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this address requires verification, click the Verify Address button at the top of the Address page. Consult the Help documentation in the Power of Us Hub for more information.</inlineHelpText>
        <label>Address Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup to the Batch that this contact was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current Address that the Contact&apos;s mailing fields are filled with.</description>
        <inlineHelpText>The current Address that the Contact&apos;s mailing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>npsp__Address__c.npsp__Household_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact&apos;s household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>npsp__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</description>
        <inlineHelpText>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this option excludes the contact from emails and phone calls.</description>
        <inlineHelpText>When selected, this option excludes the contact from emails and phone calls.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Formal Greeting.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Formal Greeting.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Informal Greeting.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Name.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Amount__c</fullName>
        <description>The amount of the earliest soft credit.</description>
        <inlineHelpText>The amount of the earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Date__c</fullName>
        <description>The date of the earliest soft credit.</description>
        <inlineHelpText>The date of the earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__HHId__c</fullName>
        <formula>if(Account.npe01__SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))</formula>
        <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
        <label>HHId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Amount__c</fullName>
        <description>The amount of the largest soft credit.</description>
        <inlineHelpText>The amount of the largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Date__c</fullName>
        <description>The date of the largest soft credit.</description>
        <inlineHelpText>The date of the largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Amount__c</fullName>
        <description>The amount of the most recent soft credit.</description>
        <inlineHelpText>The amount of the most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Date__c</fullName>
        <description>The date of the most recent soft credit.</description>
        <inlineHelpText>The date of the most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_N_Days__c</fullName>
        <description>Total amount for all soft credits that closed in the last N days. The value of N is defined in the NPSP Settings tab.</description>
        <inlineHelpText>The number of soft credits, closed in the last number of days defined in NPSP Settings.</inlineHelpText>
        <label>Number of Soft Credits Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_Year__c</fullName>
        <description>The number of soft credits last year.</description>
        <inlineHelpText>The number of soft credits last year.</inlineHelpText>
        <label>Number of Soft Credits Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_This_Year__c</fullName>
        <description>The number of soft credits this year.</description>
        <inlineHelpText>The number of soft credits this year.</inlineHelpText>
        <label>Number of Soft Credits This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Two_Years_Ago__c</fullName>
        <description>The number of soft credits 2 years ago.</description>
        <inlineHelpText>The number of soft credits 2 years ago.</inlineHelpText>
        <label>Number of Soft Credits Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits__c</fullName>
        <description>The number of soft credits.</description>
        <inlineHelpText>The number of soft credits.</inlineHelpText>
        <label>Number of Soft Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track the account of the contact&apos;s Organization Affiliation record that is marked primary.</inlineHelpText>
        <label>Primary Affiliation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Use.  Use Organization Affiliations.</relationshipLabel>
        <relationshipName>PrimaryAffiliatedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <description>Automatically checked if the Contact is the Primary Contact on their Account.</description>
        <formula>Account.npe01__One2OneContact__c = Id</formula>
        <inlineHelpText>This is is checked if the user is the Primary Contact on their Account.  The Primary Contact can be edited on the Account.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Soft_Credit_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount of Soft Credit, closed in the last number of days defined in NPSP Settings.</description>
        <inlineHelpText>The total amount of Soft Credit, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Soft Credit Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</description>
        <inlineHelpText>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</inlineHelpText>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Organization_Name_Update</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Organization_Name_Update__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization_Name_Update__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.gf_sf__General_Contact</value>
        </filters>
        <label>Organization Name Update</label>
        <sharedTo>
            <group>MCF_Staff</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>gf_sf__General_Contact</fullName>
        <active>true</active>
        <description>This is the standard contact record type used for most individuals.</description>
        <label>General Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>gf_sf__Individual_Member</fullName>
        <active>false</active>
        <description>This record type is only used for individuals that have an Individual Membership.</description>
        <label>Individual Member</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>gf_sf__Validate_Blog_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF (  gf_sf__Blog__c  &lt;&gt; null, not(REGEX(   gf_sf__Blog__c  , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Blog__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_Facebook_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( gf_sf__Facebook__c &lt;&gt; null, not(REGEX(   gf_sf__Facebook__c  , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Facebook__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_Flickr_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( gf_sf__Flickr__c &lt;&gt; null, not(REGEX( gf_sf__Flickr__c  , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Flickr__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_Google_Plus_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF (  gf_sf__Google_plus__c &lt;&gt; null, not(REGEX( gf_sf__Google_plus__c , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Google_plus__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_Instagram_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF (   gf_sf__Instagram__c &lt;&gt; null, not(REGEX( gf_sf__Instagram__c , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Instagram__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_LinkedIn_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( gf_sf__LinkedIn__c  &lt;&gt; null, not(REGEX(  gf_sf__LinkedIn__c  , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__LinkedIn__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_Pinterest_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF (  gf_sf__Pinterest__c &lt;&gt; null, not(REGEX( gf_sf__Pinterest__c , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Pinterest__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_Tumblr_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF (   gf_sf__Tumblr__c &lt;&gt; null, not(REGEX( gf_sf__Tumblr__c , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Tumblr__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_Twitter_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF (gf_sf__Twitter__c &lt;&gt; null, not(REGEX(  gf_sf__Twitter__c  , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Twitter__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_Web_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( gf_sf__Web__c  &lt;&gt; null, not(REGEX( gf_sf__Web__c , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__Web__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>gf_sf__Validate_YouTube_Vimeo_by_Drupal_Regex</fullName>
        <active>true</active>
        <errorConditionFormula>IF (  gf_sf__YouTube_Vimeo__c  &lt;&gt; null, not(REGEX( gf_sf__YouTube_Vimeo__c  , &quot;^(?:ftp|https?|feed)://(?:(?:(?:[\\w\\.\\-\\+!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+:)*(?:[\\w\\.\\-\\+%!$&amp;&apos;\\(\\)*,;=]|%[0-9a-f]{2})+@)?(?:(?:[a-z0-9\\-\\.]|%[0-9a-f]{2})+|(?:\\[(?:[0-9a-f]{0,4}:)*(?:[0-9a-f]{0,4})\\]))(?::[0-9]+)?(?:[/|\\?](?:[\\w#!:\\.\\?\\+=&amp;@$&apos;~*,;/\\(\\)\\[\\]\\-]|%[0-9a-f]{2})*)?$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>gf_sf__YouTube_Vimeo__c</errorDisplayField>
        <errorMessage>Please enter a valid url. The most common error is not starting the value with http://</errorMessage>
    </validationRules>
</CustomObject>